# c2000ware-core-sdk

./: meson.build
